fp zwolnienia p[owot macierztynski

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -178,10 +178,14 @@
                             <h:outputText value="do wypł."/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="FP"/>
+                            <h:outputText value="FP" rendered="#{itempasek.fpprzekroczeniewiek eq false and itempasek.fppowrotmacierzynski eq false}"/>
+                            <h:outputText value="FP zwol. wiek" rendered="#{itempasek.fpprzekroczeniewiek eq true}"/>
+                            <h:outputText value="FP powrót mac." rendered="#{itempasek.fppowrotmacierzynski eq true}"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="FGŚP"/>
+                            <h:outputText value="FGŚP" rendered="#{itempasek.fpprzekroczeniewiek eq false and itempasek.fppowrotmacierzynski eq false}"/>
+                            <h:outputText value="FGŚP zwol. wiek" rendered="#{itempasek.fpprzekroczeniewiek eq true}"/>
+                            <h:outputText value="FGŚP powrót mac." rendered="#{itempasek.fppowrotmacierzynski eq true}"/>
                         </p:column>
 
                     </p:row>
