srobne naprawy biurowe wysylka

--- a/kadry/src/main/webapp/kalendarz/sub/firma_wypadkowe.xhtml
+++ b/kadry/src/main/webapp/kalendarz/sub/firma_wypadkowe.xhtml
@@ -58,7 +58,7 @@
                             <f:facet name="header">
                                 <h:outputText value=""/>
                             </f:facet>
-                            <p:commandButton icon="pi pi-trash" actionListener="#{wypadkowefirmaView.usun(itemkartapasek)}" update="akordeon:WypadkoweFormLista"/>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{wypadkowefirmaView.usun(itemwypadkowe)}" update="akordeon:WypadkoweFormLista"/>
                         </p:column>
                         
                     </p:dataTable>
