--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -37,7 +37,7 @@
                         <p:outputLabel value="kod ZUS" for="kodumowy1" />
                         <p:inputText id="kodumowy1" value="#{umowaView.selected.umowakodzus.kod}" title="kod" readonly="true"/>
                         <p:outputLabel value="nr umowy" for="nrumowy1" />
-                        <h:outputText id="nrumowy1" value="#{umowaView.selected.nrkolejny}" title="data od" style="width: 200px;"/>
+                        <p:inputText id="nrumowy1" value="#{umowaView.selected.nrkolejny}" title="data od" style="width: 200px;"/>
                         <p:outputLabel value="czas trwania" for="czasumowy1" />
                         <p:selectOneMenu id="czasumowy1" value="#{umowaView.selected.slownikszkolazatrhistoria}" autoWidth="false" style="width: 300px;" required="true" 
                                          converter="#{slownikszkolazatrhistoriaConverter}">
@@ -145,7 +145,7 @@
                         <p:outputLabel value="kod ZUS" for="kodumowy" />
                         <p:inputText id="kodumowy" value="#{umowaView.selected.umowakodzus.kod}" title="kod" readonly="true"/>
                         <p:outputLabel value="nr umowy" for="nrumowy" />
-                        <h:outputText id="nrumowy" value="#{umowaView.selected.nrkolejny}" title="data od" style="width: 200px;"/>
+                        <p:inputText  id="nrumowy" value="#{umowaView.selected.nrkolejny}" title="data od" style="width: 200px;"/>
                         <p:outputLabel value="czas trwania" for="czasumowy" />
                         <p:selectOneMenu id="czasumowy" value="#{umowaView.selected.slownikszkolazatrhistoria}" autoWidth="false" style="width: 300px;" required="true" 
                                          converter="#{slownikszkolazatrhistoriaConverter}">
@@ -270,7 +270,7 @@
                         <p:outputLabel value="kod ZUS" for="kodumowy2" />
                         <p:inputText id="kodumowy2" value="#{umowaView.selected.umowakodzus.kod}" title="kod" readonly="true"/>
                         <p:outputLabel value="nr umowy" for="nrumowy2" />
-                        <h:outputText id="nrumowy2" value="#{umowaView.selected.nrkolejny}" title="data od" style="width: 200px;"/>
+                        <p:inputText id="nrumowy2" value="#{umowaView.selected.nrkolejny}" title="data od" style="width: 200px;"/>
                         <p:outputLabel value="czas trwania" for="czasumowy2" />
                         <p:selectOneMenu id="czasumowy2" value="#{umowaView.selected.slownikszkolazatrhistoria}" autoWidth="false" style="width: 300px;" required="true" 
                                          converter="#{slownikszkolazatrhistoriaConverter}">
