--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_zbiorcze_skladniki.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_zbiorcze_skladniki.xhtml
@@ -22,7 +22,7 @@
             <p:panelGrid columns="1">
                 <h:form  styleClass="formadmin" id="SkladnikibiorczeCreateForm">
                     <h:panelGroup id="display">
-                        <h:outputText value="Po wybraniu skłądnika pokazywane są tylko te osobny, które mają taką aktywne angaze i skłądnik ten jest już przyporządkowany danej osobie. Program naniesie składnik tylko tym osobom, które są wybrane"
+                        <h:outputText value="Po wybraniu składnika pokazywane są tylko te osobny, które mają aktywne angaze i taki składnik nie jest już przyporządkowany danej osobie. Program naniesie składnik tylko tym osobom, które są wybrane"
                                       style="color: green;"/>
                         <p:panelGrid columns="4" style="margin-top: 20px;">
                             <p:panelGrid columns="2">
