--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -7,14 +7,14 @@
 
     xmlns:bcf="http://brzaskun.com/facelets"
 >
-    <p:dialog id="dialoglistaplac" header="Wyliczanie listy płac" widgetVar="dialoglistaplac"  maximizable="true" dynamic="true"
+    <p:dialog id="dialoglistaplac" header="Wyliczanie listy płac" widgetVar="dialoglistaplac"  maximizable="true"
               resizable="false"  onShow="ustawdialog('dialoglistaplac','centertile',1650,820);" closeOnEscape="true" onHide="resetujdialog('dialoglistaplac');" 
               fitViewport="true">
-        <p:ajax event="open" listener="#{pasekwynagrodzenView.init()}" update="DefinicjalistaplacCreateForm DefinicjalistaplacCreateForm1 KursDataLPForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm" global="false"/>
+        <p:ajax event="open" listener="#{pasekwynagrodzenView.init()}" update="DefinicjalistaplacCreateForm DefinicjalistaplacCreateForm1 KursDataLPForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm" global="true"/>
         <p:panelGrid columns="2">
             <p:autoUpdate/>
             <h:outputText value="W przypadku braku osoby na zleceniu na liście proszę sprawdzić, czy wystawiono rachunek." style="color: #136e13;margin-top: 10px;"/>
-            <h:outputText value="Adres email do wysyłki listy: #{wpisView.getFirma().getEmail()}" style="color: #136e13;margin-top: 10px;"/>
+            <h:outputText value="Adres email do wysyłki listy: #{wpisView.getFirma().getEmail()}" style="color: #136e13;margin-top: 10px;margin-left: 5px;"/>
         </p:panelGrid>
         <p:outputPanel style="height: 275px">
             <style>
