--- a/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_etat.xhtml
@@ -32,7 +32,7 @@
                         <p:dataTable id="datalist" value="#{etatView.lista}" var="itemetat"
                                      selectionMode="single" selection="#{etatView.selectedlista}" sortBy="#{itemetat.dataod}"
                                      rowKey="#{itemetat.id}" emptyMessage="Składnik nie posiada zdefiniowanych zmiennych"
-                                     style="height: 100px; overflow-y: scroll;width: 800px;"
+                                     style="height: 100px; overflow-y: scroll;width: 700px;"
                                      >
 
                             <p:column width="40" style="text-align: center;">
@@ -64,7 +64,7 @@
                             <p:column width="30" style="text-align: center;">
                                 <p:commandButton icon="pi pi-pencil"  actionListener="#{etatView.wybierzdoedycji(itemetat)}" update="north, akordeon:EtatCreateForm"/>
                             </p:column>
-                            <p:column style="text-align: center;">
+                            <p:column width="30" style="text-align: center;">
                                 <p:commandButton icon="pi pi-trash" actionListener="#{etatView.usunEtat(itemetat)}" update="north akordeon:EtatListForm"/>
                             </p:column>
                         </p:dataTable>
