--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -240,7 +240,7 @@
                                  selectionMode="single" selection="#{slownikpotraceniaView.selectedlista}"
                                  rowKey="#{item12.id}" 
                                  scrollable="true" scrollHeight="700" scrollRows="30" 
-                                 style="width: 800px;"
+                                 style="width: 830px;"
                                  >
 
                         <p:column width="40" style="text-align: center;">
@@ -267,7 +267,12 @@
                             </f:facet>
                             <bcf:inputpl value="#{item12.limitumowazlecenia}"/>
                         </p:column>
-
+                        <p:column style="text-align: center;" width="40">
+                            <f:facet name="header">
+                                <h:outputText value="potrąc. komor."/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item12.potraceniekomornicze}"/>
+                        </p:column>
                     </p:dataTable>
                     <p:commandButton value="zachowaj" styleClass="buttonnorm" actionListener="#{slownikpotraceniaView.zachowaj}" update="@form"/>
                 </h:form>
