--- a/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/pit_oblicz.xhtml
@@ -25,7 +25,10 @@
                             <h:outputText value="remanent poczatkowy"/>
                             <bcf:outputpl value="#{remanentView.remanentPoczRoku}"/>
                             <h:outputText value="remanent końcowy"/><bcf:outputpl value="#{remanentView.remanentKoniecRoku}"/>
-                            <h:outputText value="różnica"/><bcf:outputpl value="#{remanentView.roznica}"/>
+                            <h:outputText value="wartości identyczne" rendered="#{remanentView.roznica eq 0.0}"/>
+                            <h:outputText value="różnica zmniejszająca koszty" rendered="#{remanentView.roznica gt 0.0}"/>
+                            <h:outputText value="różnica zwiększająca koszty" rendered="#{remanentView.roznica lt 0.0}"/>
+                            <bcf:outputpl value="#{remanentView.roznica}"/>
                         </p:panelGrid>
                         <p:panel header="wybierz osobę: " style="width: 250px;" rendered="#{zestawienieView.listawybranychudzialowcow.size() gt 1}"/>
                         <p:selectOneMenu value="#{zestawienieView.wybranyudzialowiec}" style="width: 250px;"  rendered="#{zestawienieView.listawybranychudzialowcow.size() gt 1}" converter="#{podatnikUdzialyConv}">
@@ -78,8 +81,9 @@
                             <bcf:outputpl value="#{zestawienieView.biezacyPit.koszty}" stylePlus="color: red; font-weight: 700;"/>
                             <h:outputText value="wynik firmy narast."/>
                             <bcf:outputpl value="#{zestawienieView.biezacyPit.wynikNarastajaco}" stylePlus="#{zestawienieView.biezacyPit.wynikNarastajaco gt 0 ? 'font-weight: 700; float: right; text-align: right; color: blue;' : 'font-weight: 700; float: right; text-align: right; color: red;'}"/>
-                            <h:outputText value="rozliczenie remanentów" rendered="#{WpisView.miesiacWpisu eq '12'}"/>
-                            <bcf:outputpl value="#{remanentView.roznica}" stylePlus="color: green; font-weight: 700;" rendered="#{WpisView.miesiacWpisu eq '12'}"/>
+                            <h:outputText value="rozliczenie remanentów - zmniejszenie kosztów" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.biezacyPit.remanent gt 0.0}"/>
+                            <h:outputText value="rozliczenie remanentów - zwiększenie kosztów" rendered="#{WpisView.miesiacWpisu eq '12' and zestawienieView.biezacyPit.remanent lt 0.0}"/>
+                            <bcf:outputpl value="#{zestawienieView.biezacyPit.remanent}" stylePlus="color: green; font-weight: 700;" rendered="#{ zestawienieView.biezacyPit.remanent ne 0.0}"/>
                             <h:outputText value="udział %" rendered="#{zestawienieView.biezacyPit.udzial ne null and zestawienieView.biezacyPit.udzial ne '100'}"/>
                             <bcf:outputpl value="#{zestawienieView.biezacyPit.udzial}" rendered="#{zestawienieView.biezacyPit.udzial ne null and zestawienieView.biezacyPit.udzial ne '100'}"/>
                             <h:outputText value="przychody udział" rendered="#{zestawienieView.biezacyPit.udzial ne null and zestawienieView.biezacyPit.udzial ne '100'}"/>
@@ -130,17 +134,17 @@
                                 <h:outputText value="termin płatności"/><h:outputText value="#{zestawienieView.biezacyPit.terminwplaty}"/>
                             </p:panelGrid>
                         </p:panelGrid>
-                        <p:panelGrid  columns="3" style="margin-left: auto; margin-right: auto; width: 480px;">
+                        <p:panelGrid  columns="4" style="margin-left: auto; margin-right: auto; width: 480px;">
                             <p:commandButton  value="Pdf" actionListener="#{sesjaView.dodajwydruk()}" action="#{zestawienieView.drukujbiezacypit()}" 
                                               onsuccess="wydrukpit5('#{WpisView.podatnikWpisu}');" style="width: 120px;" rendered="#{zamkniecieView.sprawdzMiesiacRok()}">
                             </p:commandButton>
 
-                            <p:commandButton value="przelicz"  action="#{zestawienieView.obliczPit()}" update="formpit" type="submit" style="width: 140px" styleClass="klik"/>
+                            <p:commandButton value="przelicz"  action="#{zestawienieView.obliczPit()}" update="formpit" type="submit" style="width: 120px" styleClass="klik"/>
+                            <p:commandButton value="oblicz pit roczny"  action="#{zestawienieView.obliczPitRoczny()}" update="formpit" type="submit" style="width: 120px" styleClass="klik"/>
                             <p:splitButton value="zachowaj pit"  action="#{zestawienieView.zachowajPit()}" update="akordeon:formpit akordeon:formpi:tablicapita" type="submit">
                                 <p:menuitem global="false" value="dodatkowy-13" actionListener="#{zestawienieView.zachowajPit13()}" icon="ui-icon-arrowrefresh-1-w"/>  
                             </p:splitButton>
-                            <p:commandButton value="wyślij"  action="#{zestawienieView.wyslijPit()}" type="submit" style="width: 140px"/>
-                            <h:outputText value="email: #{WpisView.podatnikObiekt.email}"/>
+                            <p:commandButton value="wyślij do podatnika"  action="#{zestawienieView.wyslijPit()}" type="submit" style="width: 120px"/>
                         </p:panelGrid>
                     </p:panelGrid>
                     <!--                    <p:panelGrid  columns="1" >
