--- a/kadry/src/main/webapp/wydruki/sub/zaswiadczenie_zarobki.xhtml
+++ b/kadry/src/main/webapp/wydruki/sub/zaswiadczenie_zarobki.xhtml
@@ -88,6 +88,9 @@
                         <p:column headerText="brutto">
                             <bcf:outputpl value="#{itemdra.brutto}" />
                         </p:column>
+                        <p:column headerText="podstawa społecznych">
+                            <bcf:outputpl value="#{itemdra.podstawaskladkizus}" />
+                        </p:column>
                         <p:column headerText="razem spoleczne prac.">
                             <bcf:outputpl value="#{itemdra.razemspolecznepracownik}"/>
                         </p:column>
