--- a/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
+++ b/npkpir_23/web/kadrowa/sub/dochoddladra.xhtml
@@ -13,7 +13,7 @@
                 <p:outputPanel>
                     <f:view>
                         <h:form id="formtabela">
-                            <p:panelGrid columns="8">
+                            <p:panelGrid columns="9">
                                 <h:outputText value="rok deklaracji:" style="text-shadow: #6374AB 1px -1px 1px"/>
                                 <p:selectOneMenu id="rokWpisu" value="#{dochodDlaDRAView.rok}" style="width: 70px;">
                                     <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
@@ -30,6 +30,7 @@
                                 <p:selectBooleanCheckbox value="#{dochodDlaDRAView.pokazzrobione}"  itemLabel="pokaż zrobione" style="width: 220px;margin-left: 20px;">
                                     <p:ajax event="change" partialSubmit="true" listener="#{dochodDlaDRAView.pobierz}"  update="akordeon:formtabela akordeon:formtabela1"/>
                                 </p:selectBooleanCheckbox>
+                                
                                 <h:outputText value="rodzaj opodatkowania:" style="text-shadow: #6374AB 1px -1px 1px"/>
                                 <p:selectOneMenu id="opodatkowanie" value="#{dochodDlaDRAView.opodatkowanie}" style="width: 70px;margin-left: 20px;">
                                     <f:selectItem itemLabel="wszystkie" noSelectionOption="true"/>
@@ -466,14 +467,21 @@
                                     background-color: #e4e3e3 !important;
                                 }
                             </style>
-                            <p:panelGrid columns="3">
+                            <p:panelGrid columns="6">
+                                <h:outputText value="rok deklaracji:" style="text-shadow: #6374AB 1px -1px 1px"/>
+                                <p:selectOneMenu id="rokWpisu" value="#{dochodDlaDRAView.rok}" style="width: 70px;">
+                                    <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
+                                    <f:selectItems value="#{roki.rokiList}"/>
+                                    <p:ajax event="change" partialSubmit="true"/>
+                                </p:selectOneMenu>
                                 <h:outputText value="miesiąc deklaracji:" style="text-shadow: #6374AB 1px -1px 1px"/>
                                 <p:selectOneMenu id="miesiacWpisu" value="#{dochodDlaDRAView.mc}" style="width: 70px;">
                                     <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
                                     <f:selectItems value="#{mce.mceList}"/>
                                     <p:ajax event="change" partialSubmit="true" listener="#{dochodDlaDRAView.podsumujDRA()}" update="akordeon:formtabeladra"/>
                                 </p:selectOneMenu>
-                                <p:commandButton id="przeliczbutton1" value="pobierz" actionListener="#{dochodDlaDRAView.podsumujDRA()}"  style="width: 120px;margin-left: 20px;" update="akordeon:formtabeladra"/>
+                                <p:commandButton id="przeliczbutton1" value="pobierz z bazy" actionListener="#{dochodDlaDRAView.podsumujDRA()}"  style="width: 120px;margin-left: 20px;" update="akordeon:formtabeladra"/>
+                                <p:commandButton id="przeliczbutton2" value="aktual. z Płatnika" actionListener="#{dochodDlaDRAView.pobierzzplatnika}"  style="width: 120px;margin-left: 20px;" update="akordeon:formtabeladra"/>
                             </p:panelGrid>
                             <p:dataTable value="#{dochodDlaDRAView.drasumy}" var="itemdra" style="width: 1950px;padding: 20px;"  reflow="true"
                                          scrollable="true" scrollHeight="750" scrollRows="30" selectionMode="single"
