srobne naprawy biurowe wysylka

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cecha_dokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cecha_dokument.xhtml
@@ -40,7 +40,7 @@
                 </p:column>
             </p:dataTable>
              <p:outputPanel style="text-align: center;">
-                <p:commandButton value="zapisz wybraną (X)" style="width: 150px;" accesskey="x" actionListener="#{dokfkView.dodajcechedodokumentu()}"
+                <p:commandButton value="zapisz wybraną (M)" style="width: 150px;" accesskey="m" actionListener="#{dokfkView.dodajcechedodokumentu()}"
                                  update="formCH:tablicacech formCH:tablicacech2"/>
                  <p:commandButton value="zamknij (N)" style="margin-left: 10px;width: 150px;" accesskey="n" 
                                   oncomplete="PF('dialogCechyDokumentu').hide()"/>
