--- a/npkpir_23/web/ksiegowa/sub/obroty.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/obroty.xhtml
@@ -57,9 +57,9 @@
                 <h:outputText value="#{wpis.dataWyst.substring(2,10)}">
                 </h:outputText>
             </p:column>
-            <p:column id="kontrColumn" width="270" headerText="#{mgs.kontrahent}" filterBy="#{wpis.kontr.npelna}" filterMatchMode="contains" filterStyle="display: none;" sortBy="#{wpis.kontr.npelna}" style="width: 14%;">  
+            <p:column id="kontrColumn" width="270" headerText="#{mgs.kontrahent}" filterBy="#{wpis.kontr.npelna}" filterMatchMode="contains" sortBy="#{wpis.kontr.npelna}" style="width: 14%;">  
                  <f:facet name="filter">
-                     <p:selectOneMenu onchange="PF('dokTable').filter()" style="width: 250px;">
+                     <p:selectOneMenu onchange="PF('dokTable').filter()" style="width: 250px;" filter="#{wpis.kontr.npelna}" filterMatchMode="contains">
                         <f:selectItem itemLabel="kontrahent" itemValue="#{null}" />
                         <f:selectItems value="#{obrotyView.kontrahentypodatnika}" />
                         <p:ajax event="change" listener="#{obrotyView.czyscwybrane}" update=":formX:podsumowaniewybr :formX:podsumowaniewybrnetto :formX:dokumentyLista"/>
