--- a/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
+++ b/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
@@ -90,7 +90,7 @@
                         <p:panelGrid columns="1">
                         <p:autoComplete id="usnazwa" completeMethod="#{tKodUS.complete}" value="#{pracownikDane2View.selected.nazwaurzeduskarbowego}"
                                     forceSelection="true" maxResults="15" size="250"  minQueryLength="3" effect="clip" var="p"
-                                    itemLabel="#{p}" itemValue="#{p}" inputStyle="width:400px;">
+                                    itemLabel="#{p}" itemValue="#{p}" inputStyle="width:400px;" required="true" requiredMessage="Wybierz urząd skarbowy pracownika">
                         <f:facet name="itemtip">  
                             <h:panelGrid  columns="2" cellpadding="5" width="400">  
                                 <f:facet name="header">  
