naprawa rozwiazanie umowy

--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
@@ -23,8 +23,8 @@
                                 <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datadokumentu}" size="10" placeholder="____-__-__"/>
                                 <h:outputText value="data wypowiedzenia: " style="margin-top: 30x;"/>
                                 <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datawypowiedzenia}" size="10" placeholder="____-__-__"/>
-                                <h:outputText value="okres wypowiedzenia upłynia dnia: " />
-                                <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datauplywuokresuwyp}" size="10" placeholder="____-__-__"/>
+                                <h:outputText value="okres wyp./umowa upłynie dnia: " />
+                                <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.datauplywuokresuwyp}" size="10" placeholder="____-__-__" required="true" requiredMessage="Wpisa datę zakończenia umowy"/>
                                 <h:outputText value="przyczyna wypowiedzenia: "/>
                                 <p:inputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.przyczyna}" size="200"/>
                                 <h:outputText value="sposob wypowiedzenia: "/>
